--- a/src/app.pcss
+++ b/src/app.pcss
@@ -1,7 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@font-face {
+    font-family: 'PP Gosha Sans';
+    src: url("/fonts/PPGoshaSans-Bold.otf");
+    font-weight: bold;
+}
 html, body {
     font-family: 'PP Gosha Sans', ui-serif;
 }
